--- a/Motion Chart.ipynb
+++ b/Motion Chart.ipynb
@@ -3960,7 +3960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4755,10 +4755,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1107efcf8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110fbde80>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
